--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: myapp-argo-application-release
   namespace: argocd
 spec:
   project: default
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Likine92/project-release-argocd.git
     targetRevision: HEAD
-    path: dev
+    path: Release
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
